# EarleyParser

./: CMakeLists.txt  README.md
include/: earley.hpp  grammar.hpp  reader.hpp
src/: CMakeLists.txt  earley.cpp  main.cpp  reader.cpp
test_gen/: gen_any.ipynb  gen_bs.ipynb
tests/: CMakeLists.txt  test_earley.cpp  test_earley.hpp
tests/test_big_bs/: test_words.txt
tests/test_bs/: grammar.txt  test_words.txt
tests/test_simple1/: grammar.txt  test_words.txt
tests/test_simple2/: grammar.txt  test_words.txt
